crates/pgls_tokenizer/src/snapshots/pgls_tokenizer__tests__bitstring.snap
---
source: crates/pgls_tokenizer/src/lib.rs
expression: "lex(r#\"\nB'1001'\nb'1001'\nX'1FF'\nx'1FF'\n\"#)"
snapshot_kind: text
---
[
    "\n" @ LineEnding { count: 1 },
    "B'1001'" @ Literal { kind: BitStr { terminated: true } },
    "\n" @ LineEnding { count: 1 },
    "b'1001'" @ Literal { kind: BitStr { terminated: true } },
    "\n" @ LineEnding { count: 1 },
    "X'1FF'" @ Literal { kind: ByteStr { terminated: true } },
    "\n" @ LineEnding { count: 1 },
    "x'1FF'" @ Literal { kind: ByteStr { terminated: true } },
    "\n" @ LineEnding { count: 1 },
]
