crates/pgls_tokenizer/src/snapshots/pgls_tokenizer__tests__block_comment.snap
---
source: crates/pgls_tokenizer/src/lib.rs
expression: result
snapshot_kind: text
---
[
    "\n" @ LineEnding { count: 1 },
    "/*\n * foo\n * bar\n*/" @ BlockComment { terminated: true },
]
