crates/pgls_tokenizer/src/snapshots/pgls_tokenizer__tests__block_comment_unterminated.snap
---
source: crates/pgls_tokenizer/src/lib.rs
expression: result
snapshot_kind: text
---
[
    "\n" @ LineEnding { count: 1 },
    "/*\n * foo\n * bar\n /*\n*/" @ BlockComment { terminated: false },
]
