crates/pgls_tokenizer/src/snapshots/pgls_tokenizer__tests__lex_statement.snap
---
source: crates/pgls_tokenizer/src/lib.rs
expression: result
snapshot_kind: text
---
[
    "select" @ Ident,
    " " @ Space,
    "1" @ Literal { kind: Int { base: Decimal, empty_int: false } },
    ";" @ Semi,
]
