crates/pgls_tokenizer/src/snapshots/pgls_tokenizer__tests__line_comment.snap
---
source: crates/pgls_tokenizer/src/lib.rs
expression: result
snapshot_kind: text
---
[
    "\n" @ LineEnding { count: 1 },
    "-- foooooooooooo bar buzz" @ LineComment,
    "\n" @ LineEnding { count: 1 },
]
